<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="image_view_preview_desc">Image view preview</string>
    <string name="app_short_description">Learn how to make simple Java apps in Android Studio. 📱</string>
    <string name="notification_update_title">A new update is available</string>
    <string name="summary_notification_update">A new version of the app is available. Tap to update.</string>
    <string name="notification_last_time_used_title">It\'s been a while</string>
    <string name="summary_notification_last_time_used">It\'s been a while—learn something new about Android.</string>
    <string name="menu">Menu</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="error_no_app_for_link">No app found to open this link.</string>
    <string name="lesson_open_in_browser">Open lesson in browser</string>
    <string name="welcome">Welcome</string>
    <string name="summary_browse_terms_of_service_and_privacy_policy">Read and agree to the Terms of Service and Privacy Policy to continue</string>
    <string name="agree">Agree</string>
    <string name="home">Home</string>
    <string name="announcement_title">A new app is here</string>
    <string name="announcement_subtitle">Check out the latest Android Studio Tutorials app. Learn Jetpack Compose, Material 3, and more.</string>
    <string name="profile_picture_desc">Developer profile picture</string>
    <string name="main_card_title">Discover Android Studio tutorials</string>
    <string name="main_card_subtitle">Featuring Kotlin and Java editions</string>
    <string name="main_card_description">The Kotlin Edition has been updated with dynamic lessons, AI assistant, and more. Experience the future of Android development.</string>
    <string name="get_on_google_play">Get it on Google Play</string>
    <string name="learn_more">Learn more</string>
    <string name="play_store">Play Store</string>
    <string name="ad">Ad</string>
    <string name="ad_attribution_with_advertiser">Ad from %1$s</string>
    <string name="search_lessons_hint">Search lessons</string>
    <string name="search_lessons_content_description">Search lessons</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_start">Start a new project</string>
    <string name="android_start_project">Start a new project</string>
    <string name="step1">Step 1</string>
    <string name="summary_first_step">The first step to create a new project in Android Studio is to click on the <b>New project</b> button as shown in the image and continue to the next step.</string>
    <string name="step2">Step 2</string>
    <string name="summary_second_step">The second step is to select the activity type that suits your app. You can choose from some presets that can simplify your work. Select one of them and click on the <b>next</b> button.</string>
    <string name="step3">Step 3</string>
    <string name="summary_third_step">The third and final step is to configure your app settings, such as the app name, <b>package name</b>, preferred <b>programming language</b> and <b>minimum SDK</b>. You can learn more about them on <a href="https://developer.android.com/">Android Developers</a>.</string>
    <string name="basics">Basics</string>
    <string name="shortcuts">Android Studio shortcuts</string>
    <string name="shortcuts_title">Shortcuts</string>
    <string name="description">Description</string>
    <string name="general">General</string>
    <string name="save_all">Save all</string>
    <string name="synchronize">Synchronize</string>
    <string name="maximize">Maximize/minimize editor</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="file_inspect">Inspect current file with current profile</string>
    <string name="quick_switch_theme">Quick switch theme</string>
    <string name="open_settings">Open settings dialog</string>
    <string name="open_project">Open project structure dialog</string>
    <string name="switch_tabs">Switch between tabs and tool window</string>
    <string name="refactoring">Refactoring</string>
    <string name="move">Move</string>
    <string name="safe_delete">Safe delete</string>
    <string name="rename">Rename</string>
    <string name="change_signature">Change signature</string>
    <string name="inline">Inline</string>
    <string name="extract_method">Extract method</string>
    <string name="extract_field">Extract field</string>
    <string name="extract_variable">Extract variable</string>
    <string name="extract_constant">Extract constant</string>
    <string name="build_and_run">Build and run</string>
    <string name="build">Build</string>
    <string name="apply_changes">Apply changes (with Instant Run)</string>
    <string name="debugging">Debugging</string>
    <string name="debug">Debug</string>
    <string name="step_over">Step over</string>
    <string name="step_into">Step into</string>
    <string name="smart_step_into">Smart step into</string>
    <string name="step_out">Step out</string>
    <string name="run_to_cursor">Run to cursor</string>
    <string name="evaluate_expression">Evaluate expression</string>
    <string name="resume_program">Resume program</string>
    <string name="toggle_breakpoint">Toggle breakpoint</string>
    <string name="view_breakpoints">View breakpoints</string>
    <string name="navigation_and_searching">Navigation and searching</string>
    <string name="press_shift_twice">Press shift twice</string>
    <string name="search_everything">Search everything (including code and menus)</string>
    <string name="find">Find</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="replace">Replace</string>
    <string name="find_action">Find action</string>
    <string name="search_by_symbol_name">Search by symbol name</string>
    <string name="find_class">Find class</string>
    <string name="find_file">Find file (instead of class)</string>
    <string name="find_path">Find path</string>
    <string name="open_file_structure">Open file structure pop-up</string>
    <string name="navigate_between_open_tabs">Navigate between open editor tabs</string>
    <string name="jump_to_source">Jump to source</string>
    <string name="open_current_editor_tab_in_new_window">Open current editor tab in new window</string>
    <string name="recently_opened_files">Recently opened files pop-up</string>
    <string name="recently_edited_files">Recently edited files pop-up</string>
    <string name="go_to_last_edit_location">Go to last edit location</string>
    <string name="close_active_editor_tabs">Close active editor tab</string>
    <string name="return_to_editor_window">Return to editor window from a tool window</string>
    <string name="hide_active_window">Hide active or last active tool window</string>
    <string name="go_to_line">Go to line</string>
    <string name="open_type_hierarchy">Open type hierarchy</string>
    <string name="open_v_hierarchy">Open method hierarchy</string>
    <string name="open_call_hierarchy">Open call hierarchy</string>
    <string name="writing_code">Writing code</string>
    <string name="generate_code">Generate code (getters, setters, and more)</string>
    <string name="override_methods">Override methods</string>
    <string name="implement_methods">Implement methods</string>
    <string name="surround">Surround with (if/else, try/catch, and more)</string>
    <string name="delete_line">Delete line at caret</string>
    <string name="collapse_and_expand_code_block">Collapse/expand current code block</string>
    <string name="collapse_and_expand_all_code_block">Collapse/expand all code blocks</string>
    <string name="duplicate_current_line">Duplicate current line or selection</string>
    <string name="basic_code_completion">Basic code completion</string>
    <string name="smart_code_completion">Smart code completion (filters the list of methods and variables by expected type)</string>
    <string name="version_control">Version control and local history</string>
    <string name="commit_project">Commit project to VCS</string>
    <string name="update_project">Update project from VCS</string>
    <string name="view_recent_changes">View recent changes</string>
    <string name="open_vcs_popup">Open VCS pop-up</string>
    <string name="more_about_shortcuts">More about shortcuts</string>
    <string name="history_of_android">History of Android</string>
    <string name="history">History</string>
    <string name="features">Features</string>
    <string name="android_sdk">Android SDKs</string>
    <string name="android_versions">Android versions</string>
    <string name="view_binding">View Binding</string>
    <string name="setup_instructions">Setup instructions</string>
    <string name="use_view_binding_in_activities">Use view binding in activities</string>
    <string name="use_view_binding_in_fragments">Use view binding in fragments</string>
    <string name="more_about_view_binding">More about View Binding</string>
    <string name="permission_dialog_example">Permission dialog example</string>
    <string name="more_about_permissions">More about permissions</string>
    <string name="per_app_language_preferences">Per-app language preferences</string>
    <string name="predictive_back_gesture">Predictive back gesture</string>
    <string name="room_database">Room database</string>
    <string name="enter_note">Enter note</string>
    <string name="add_note">Add note</string>
    <string name="layouts">Layouts and views</string>
    <string name="linear_layout">Linear layout</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="layout_preview">Layout preview</string>
    <string name="no_java_code_needed">No Java code required for this activity</string>
    <string name="spinner_choose_label">Choose a category</string>
    <string name="spinner_description">Use the dropdown to explore different Android lesson topics.</string>
    <string name="spinner_prompt">Choose a lesson</string>
    <string name="spinner_selected_none">Select an item to see it here.</string>
    <string name="spinner_selected_example">Selected: Navigation</string>
    <string name="switch_me">Switch me</string>
    <string name="material_switch_preference">Material switch preference</string>
    <string name="material_switch">Material switch</string>
    <string name="switch_material">Switch material</string>
    <string name="toggle_button">Toggle button</string>
    <string name="clock_analog">Analog clock</string>
    <string name="clock_text">Text clock</string>
    <string name="clock_digital">Digital clock</string>
    <string name="show_code">Show code</string>
    <string name="settings">Settings</string>
    <string name="follow_system">Follow system mode</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="labeled">Labeled</string>
    <string name="selected">Selected</string>
    <string name="unlabeled">Unlabeled</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="support_us">Support the app</string>
    <string name="about">About</string>
    <string name="bottom_navigation_labels">Bottom navigation labels</string>
    <string name="choose_your_style">Choose your style</string>
    <string name="select_how_you_d_like_the_app_to_look">Choose how the app looks</string>
    <string name="tooltip_show_java_code_snippet">Show Java code snippet</string>
    <string name="view_in_google_play">View in Google Play Store</string>
    <string name="version_info">Version info</string>
    <string name="beta_program">Beta program</string>
    <string name="open_source_licenses">Open source licenses</string>
</resources>