<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.Preference
        android:key="shortcuts_general"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/general" />
    <androidx.preference.Preference
        android:key="shortcuts_refactoring"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/refactoring" />
    <androidx.preference.Preference
        android:key="shortcuts_build"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/build_and_run" />
    <androidx.preference.Preference
        android:key="shortcuts_debugging"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/debugging" />
    <androidx.preference.Preference
        android:key="shortcuts_navigation"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/navigation_and_searching" />
    <androidx.preference.Preference
        android:key="shortcuts_code"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/writing_code" />
    <androidx.preference.Preference
        android:key="shortcuts_version_control"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/version_control" />
</androidx.preference.PreferenceScreen>