<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/description_section"
        layout="@layout/lesson_description_section" />

    <include
        android:id="@+id/layout_preview_header"
        layout="@layout/lesson_section_header"
        tools:text="@string/layout_preview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_spinner_label"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/spinner_choose_label" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/spinner_card"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:contentPadding="24dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardViewTopRoundedOutlined">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_spinner_description"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_description" />

            <Spinner
                android:id="@+id/spinner_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:prompt="@string/spinner_prompt" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_selected_item"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/spinner_selected_none"
                tools:text="@string/spinner_selected_example" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</merge>
