<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.zhanghai.android.fastscroll.FastScrollScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <include
                android:id="@+id/description_section"
                layout="@layout/lesson_description_section" />

            <include
                android:id="@+id/layout_preview_header"
                layout="@layout/lesson_section_header"
                android:layout_marginTop="0dp"
                tools:text="@string/layout_preview" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/material_switch_preference" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_material_switch_preference"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                app:cardCornerRadius="24dp"
                app:contentPadding="24dp">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/material_switch_preference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_me"
                    android:tooltipText="@string/switch_me"
                    tools:targetApi="26" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/material_switch" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/material_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/switch_material" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/toggle_button" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/button_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </me.zhanghai.android.fastscroll.FastScrollScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_button_show_syntax"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/tooltip_show_java_code_snippet"
        android:text="@string/show_code"
        android:textSize="14sp"
        android:tooltipText="@string/tooltip_show_java_code_snippet"
        app:icon="@drawable/ic_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="26" />
</androidx.constraintlayout.widget.ConstraintLayout>
