<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.zhanghai.android.fastscroll.FastScrollScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/floating_button_show_syntax"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <include
                android:id="@+id/description_section"
                layout="@layout/lesson_description_section" />

            <include
                android:id="@+id/layout_preview_header"
                layout="@layout/lesson_section_header"
                tools:text="@string/layout_preview" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/simpleAnalogClockText"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/clock_analog" />

            <AnalogClock
                android:id="@+id/simpleAnalogClock"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/clock_digital" />

            <DigitalClock
                android:id="@+id/digital_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/simpleTextClockText"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:text="@string/clock_text" />

            <TextClock
                android:id="@+id/simpleTextClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="24dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </me.zhanghai.android.fastscroll.FastScrollScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_button_show_syntax"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/tooltip_show_java_code_snippet"
        android:text="@string/show_code"
        android:textSize="14sp"
        android:tooltipText="@string/tooltip_show_java_code_snippet"
        app:icon="@drawable/ic_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="26" />
</androidx.constraintlayout.widget.ConstraintLayout>
